--- a/index.html
+++ b/index.html
@@ -11,6 +11,28 @@
   <title>Travelgram | Perfil de viagens</title>
 </head>
 <body>
-  
+    <div class="bg-surface-color">
+      <nav class="container">
+        <a href="#" id="logo">
+          <img src="assets/Logo.svg" alt="LogoMarca">
+        </a>
+        
+        <ul>
+          <li>
+            <a href="#">
+              <img src="assets/icon/MagnifyingGlass.svg" alt="ícone de lupa">
+            </a>
+          </li>
+
+          <li><a href="#">Explorar</a></li>
+          <li><a href="#">Minhas Viagens</a></li>
+          <li>
+            <a href="#">
+              <img src="assets/Profile pic.jpg" alt="Imagem de isabela torres">
+            </a>
+          </li>
+        </ul>
+      </nav>
+  </div>
 </body>
 </html>
