--- a/index.html
+++ b/index.html
@@ -33,6 +33,38 @@
           </li>
         </ul>
       </nav>
-  </div>
+    
+      <header>
+        <div class="container">
+          <div id="profile"> 
+            <img src="assets/Profile pic.png" alt="Imagem de isabela Torres">
+            <div>
+              <h1>Isabela Torres</h1>
+              <p>
+                Amante de viagens, cultura e gastronomia. 🌍✈️  <br>
+                Aqui compartilho as histórias registradas em cada clique, 
+                explorando cantinhos fascinantes do nosso planeta a partir
+                da movimentada cidade de São Paulo. 🏙️📸
+              </p>
+            </div>
+          </div>
+
+          <ul id="info">
+            <li>
+              <img src="assets/icon/MapPin.svg" alt="Icone de localização">
+              <span>São Paulo, Brasil</span>
+            </li>
+            <li>
+              <img src="assets/icon/AirplaneTilt.svg" alt="Icone de avião">
+              <span>37 países</span>
+            </li>
+            <li>
+              <img src="assets/icon/Image.svg" alt="Icone de imagem">
+              <span>240 fotos</span>
+            </li>
+          </ul>
+        </div>
+      </header>
+   </div>
 </body>
 </html>
