--- a/index.html
+++ b/index.html
@@ -66,5 +66,20 @@
         </div>
       </header>
    </div>
+
+   <main class="container">
+      <img src="assets/imagens/Image 01.png" alt="1">
+      <img src="assets/imagens/Image 02.png" alt="2">
+      <img src="assets/imagens/Image 03.png" alt="3">
+      <img src="assets/imagens/Image 04.png" alt="4">
+      <img src="assets/imagens/Image 05.png" alt="5">
+      <img src="assets/imagens/Image 06.png" alt="6">
+      <img src="assets/imagens/Image 07.png" alt="7">
+      <img src="assets/imagens/Image 08.png" alt="8">
+      <img src="assets/imagens/Image 09.png" alt="9">
+      <img src="assets/imagens/Image 10.png" alt="10">
+      <img src="assets/imagens/Image 11.png" alt="11">
+      <img src="assets/imagens/Image 12.png" alt="12">
+   </main>
 </body>
 </html>
