finalizamos o projeto com mastria.

--- a/index.html
+++ b/index.html
@@ -81,5 +81,19 @@
       <img src="assets/imagens/Image 11.png" alt="11">
       <img src="assets/imagens/Image 12.png" alt="12">
    </main>
+
+   <footer class="container">
+    <span>
+      Travelgram &copy; 2024
+    </span>
+
+    <span>
+      Termos de uso
+    </span>
+
+    <span>
+      Politica de privacidade
+    </span>
+   </footer>
 </body>
 </html>
